--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "jquery": "^3.6.4",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
