--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.0-alpha3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "jquery": "^3.6.4",
@@ -18,7 +19,8 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "react-waypoint": "^10.3.0"
   },
   "devDependencies": {
     "expose-loader": "^4.1.0",
