react-waypoint discontinued

--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-syntax-highlighter": "^15.5.0",
-    "react-waypoint": "^10.3.0"
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "expose-loader": "^4.1.0",
